--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.5.21"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "bootstrap-fileinput": "^5.0.2",
     "bootstrap-multiselect": "^0.9.13-1",
     "bootstrap-tagsinput": "^0.7.1",
