--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-fileinput": "^5.0.2",
     "bootstrap-multiselect": "^0.9.13-1",
     "bootstrap-tagsinput": "^0.7.1",
+    "flipclock": "^0.10.8",
     "gulp": "^4.0.1",
     "highcharts": "^7.1.1",
     "icheck": "^1.0.2",
