--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,11 @@ public/js/product-show.js
 public/js/user-profile.js
 public/js/content-show.js
 public/js/checkout-auth.js
+public/js/page-landing5.js
+public/js/page-landing7.js
+public/js/page-landing8.js
+public/js/page-landing9.js
+public/js/page-landing10.js
 public/js/content-search.js
 public/js/user-dashboard.js
 public/js/checkout-review.js
@@ -64,11 +69,15 @@ public/css/page-error.css
 public/css/content-show.css
 public/css/user-profile.css
 public/css/product-show.css
+public/css/page-landing5.css
 public/css/page-landing7.css
+public/css/page-landing8.css
+public/css/page-landing9.css
 public/css/page-homePage.css
 public/css/content-search.css
 public/css/page-contactUs.css
 public/css/user-dashboard.css
+public/css/page-landing10.css
 public/css/checkout-review.css
 public/css/page-dashboard1.css
 public/css/checkout-payment.css
