--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ public/js/admin-content-create.js
 public/js/checkout-verification.js
 public/js/product-content-embed.js
 public/js/checkout-completeInfo.js
+public/js/admin-all.js
 
 public/css/all.css
 public/css/page-shop.css
@@ -85,5 +86,12 @@ public/css/landing5-allcss.min.css
 public/css/admin-content-create.css
 public/css/user-profile-salesReport.css
 public/css/product-content-embed.css
+public/css/admin-all.css
+public/css/auth-login.css
+public/css/checkout-verification.css
+public/css/font/glyphicons-halflings-regular.ttf
+public/css/font/summernote.eot
+public/css/font/summernote.ttf
+public/css/font/summernote.woff
 
 public/.well-known/
