live view update

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ public/css/admin-all.css
 public/css/page-shop.css
 public/css/auth-login.css
 public/css/page-error.css
+public/css/user-orders.css
 public/css/content-show.css
 public/css/user-profile.css
 public/css/product-show.css
