--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
-    "axios": "^0.18",
+    "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
     "cross-env": "^5.1",
     "jquery": "^3.4.1",
     "laravel-mix": "^4.1.2",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "popper.js": "^1.15.0",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.22.3",
@@ -41,11 +41,13 @@
     "highcharts": "^7.1.1",
     "icheck": "^1.0.2",
     "inputmask": "^4.0.8",
+    "intersection-observer": "^0.7.0",
     "jquery-multiselect": "^1.0.0",
     "jquery-sticky": "^1.0.4",
     "jquery-validation": "^1.19.1",
     "jquery.ajaxsubmit": "^1.0.3",
     "lightgallery": "^1.6.12",
+    "lozad": "^1.9.0",
     "owl.carousel": "^2.3.4",
     "perfect-scrollbar": "^1.4.0",
     "persian-date": "^1.0.5",
