--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "fontawesome": "^5.6.3",
     "fs-minipass": "^1.2.6",
     "fullcalendar": "^3.10.0",
+    "glider-js": "^1.6.6",
     "glyphicons-halflings": "^1.9.1",
     "gulp": "^4.0.1",
     "highcharts": "^7.1.1",
@@ -52,12 +53,14 @@
     "jquery-validation": "^1.19.1",
     "jquery.ajaxsubmit": "^1.0.3",
     "lightgallery": "^1.6.12",
+    "lightslider": "^1.1.6",
     "lozad": "^1.9.0",
     "owl.carousel": "^2.3.4",
     "perfect-scrollbar": "^1.4.0",
     "persian-date": "^1.0.5",
     "persian-datepicker": "^1.1.5",
     "select2": "^4.0.6-rc.1",
+    "siema": "^1.5.1",
     "slick-carousel": "^1.8.1",
     "split-string": "^6.1.0",
     "summernote": "^0.8.12",
