--- a/resources/theme/default/tools/package.json
+++ b/resources/theme/default/tools/package.json
@@ -10,7 +10,7 @@
     "animejs": "^2.2.0",
     "autosize": "^4.0.0",
     "block-ui": "^2.70.1",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "bootstrap-datepicker": "^1.8.0",
     "bootstrap-daterangepicker": "^2.1.25",
     "bootstrap-datetime-picker": "^2.4.4",
@@ -18,20 +18,20 @@
     "bootstrap-markdown": "^2.10.0",
     "bootstrap-maxlength": "^1.6.0",
     "bootstrap-notify": "^3.1.3",
-    "bootstrap-select": "^1.13.0-beta",
+    "bootstrap-select": "^1.13.10",
     "bootstrap-switch": "^3.3.4",
     "bootstrap-timepicker": "^0.5.2",
     "bootstrap-touchspin": "^3.1.1",
     "bootstrap-v4-rtl": "^4.1.1-0",
     "chart.js": "^2.7.2",
-    "chartist": "^0.11.0",
+    "chartist": "^0.11.3",
     "chat.js": "^1.0.2",
     "clipboard": "^1.7.1",
-    "core-js": "^2.5.3",
+    "core-js": "^2.6.9",
     "counterup": "^1.0.2",
     "css-toggle-switch": "^4.1.0",
     "datatables.net-autofill-bs4": "^2.2.2",
-    "datatables.net-bs4": "^1.10.16",
+    "datatables.net-bs4": "^1.10.19",
     "datatables.net-buttons-bs4": "^1.5.1",
     "datatables.net-colreorder-bs4": "^1.4.1",
     "datatables.net-fixedcolumns-bs4": "^3.2.4",
@@ -50,7 +50,7 @@
     "gmaps": "^0.4.24",
     "gulp": "^3.9.1",
     "gulp-rtlcss": "^1.2.0",
-    "handlebars": "^4.0.10",
+    "handlebars": "^4.1.2",
     "inputmask": "^3.3.11",
     "ion-rangeslider": "^2.2.0",
     "jquery": "^3.3.1",
@@ -62,27 +62,27 @@
     "jqvmap": "^1.5.1",
     "js-cookie": "^2.2.0",
     "jstree": "^3.3.4",
-    "jszip": "^3.1.5",
+    "jszip": "^3.2.2",
     "markdown": "^0.5.0",
-    "moment": "^2.19.3",
+    "moment": "^2.24.0",
     "morris.js": "^0.5.0",
     "nouislider": "^10.1.0",
     "owl.carousel": "^2.3.0",
     "pace": "0.0.4",
     "pace-js": "^1.0.2",
-    "pdfmake": "^0.1.36",
+    "pdfmake": "^0.1.58",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.12.3",
-    "prismjs": "^1.8.4",
+    "prismjs": "^1.17.1",
     "rangeslider.js": "^2.3.1",
     "raphael": "^2.2.7",
     "ribble": "^1.0.4",
-    "select2": "^4.0.6-rc.1",
+    "select2": "^4.0.8",
     "smooth-scroll": "^14.2.0",
     "socicon": "^3.0.5",
     "summernote": "^0.8.9",
     "sweetalert2": "^7.26.10",
-    "tether": "^1.4.3",
+    "tether": "^1.4.7",
     "toastr": "^2.1.4",
     "tooltip.js": "^1.2.0",
     "typeahead.js": "^0.11.1",
