--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ public/js/admin-content-create.js
 public/js/checkout-verification.js
 public/js/product-content-embed.js
 public/js/checkout-completeInfo.js
+public/js/user-profile-salesReport.js
 
 
 public/css/all.css
