--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bootstrap-multiselect": "^0.9.13-1",
     "bootstrap-switch": "^3.4.0",
     "bootstrap-tagsinput": "^0.7.1",
+    "diff-match-patch": "^1.0.4",
     "flat-icons": "^1.0.0",
     "flipclock": "^0.10.8",
     "font-awesome": "^4.7.0",
