--- a/theme/default/tools/package.json
+++ b/theme/default/tools/package.json
@@ -48,7 +48,8 @@
     "es6-promise-polyfill": "^1.2.0",
     "fullcalendar": "^3.7.0",
     "gmaps": "^0.4.24",
-    "gulp": "^3.9.1",
+    "graceful-fs": "^4.2.3",
+    "gulp": "^4.0.2",
     "gulp-rtlcss": "^1.2.0",
     "handlebars": "^4.1.2",
     "inputmask": "^3.3.11",
@@ -66,6 +67,7 @@
     "markdown": "^0.5.0",
     "moment": "^2.24.0",
     "morris.js": "^0.5.0",
+    "natives": "^1.1.6",
     "nouislider": "^10.1.0",
     "owl.carousel": "^2.3.0",
     "pace": "0.0.4",
@@ -76,8 +78,10 @@
     "prismjs": "^1.17.1",
     "rangeslider.js": "^2.3.1",
     "raphael": "^2.2.7",
+    "require-dir": "^1.2.0",
     "ribble": "^1.0.4",
     "select2": "^4.0.8",
+    "sequelize-cli": "^5.5.1",
     "smooth-scroll": "^14.2.0",
     "socicon": "^3.0.5",
     "summernote": "^0.8.9",
@@ -87,6 +91,8 @@
     "tooltip.js": "^1.2.0",
     "typeahead.js": "^0.11.1",
     "underscore": "^1.8.3",
+    "undertaker": "^1.2.1",
+    "vinyl-fs": "^3.0.3",
     "waypoints": "^4.0.1",
     "wnumb": "^1.1.0",
     "yarn-install": "^0.5.1"
@@ -108,7 +114,6 @@
     "gulp-uglify-es": "^1.0.1",
     "lazypipe": "^1.0.1",
     "pretty": "^2.0.0",
-    "require-dir": "^0.3.2",
     "run-sequence": "^2.1.0",
     "stream-series": "^0.1.1",
     "yargs": "^11.0.0"
