--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lightgallery": "^1.6.12",
     "lightslider": "^1.1.6",
     "lozad": "^1.9.0",
+    "metrojs": "^0.9.77",
     "moment": "^2.24.0",
     "owl.carousel": "^2.3.4",
     "perfect-scrollbar": "^1.4.0",
