--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lozad": "^1.9.0",
     "metrojs": "^0.9.77",
     "moment": "^2.24.0",
+    "mustache": "^3.1.0",
     "owl.carousel": "^2.3.4",
     "perfect-scrollbar": "^1.4.0",
     "persian-date": "^1.0.5",
