--- a/composer.json
+++ b/composer.json
@@ -16,35 +16,32 @@
     "alaatv/payment-gateways": "1.*",
     "alaatv/zarinpal": "1.*",
     "algolia/algoliasearch-client-php": "^2.2",
-      "artesaos/seotools": "^0.16.0",
+    "artesaos/seotools": "^0.16.0",
     "cloned/luckybox": "^0.9.0",
     "doctrine/dbal": "^2.9",
     "econea/nusoap": "v0.9.5.3",
     "fideloper/proxy": "^4.0",
     "google/apiclient": "^2.0",
-    "greggilbert/recaptcha": "^2.1",
     "guzzlehttp/guzzle": "^6.3",
-    "iatstuti/laravel-cascade-soft-deletes": "^1.2",
+    "iatstuti/laravel-cascade-soft-deletes": "^2.0",
     "imanghafoori/laravel-terminator": "1.*",
     "intervention/image": "^2.4",
     "intervention/imagecache": "^2.3",
     "jenssegers/agent": "^2.5",
-    "kalnoy/nestedset": "^4.3",
-    "laravel/framework": "5.8.*",
+    "kalnoy/nestedset": "^5.0",
+    "laravel/framework": "6.0.0",
     "laravel/helpers": "^1.0",
     "laravel/horizon": "^3",
     "laravel/passport": "^7.2",
     "laravel/scout": "^7.1",
     "laravel/telescope": "^2.0",
     "laravel/tinker": "^1.0",
-    "laravelcollective/html": "^5.8",
     "league/flysystem-sftp": "~1.0",
     "nckg/laravel-minify-html": "^1.2",
-    "paulvl/backup": "3.*",
     "propaganistas/laravel-phone": "^4.1",
     "psr/http-factory": "^1.0",
     "santigarcor/laratrust": "5.*",
-    "stevebauman/purify": "2.0.*",
+    "stevebauman/purify": "3.0.*",
     "watson/sitemap": "^2.0",
     "webpatser/laravel-uuid": "^3.0",
     "yab/laravel-scout-mysql-driver": "^2.3",
