--- a/composer.json
+++ b/composer.json
@@ -29,13 +29,14 @@
     "intervention/imagecache": "^2.3",
     "jenssegers/agent": "^2.5",
     "kalnoy/nestedset": "^5.0",
-    "laravel/framework": "6.0.0",
+    "laravel/framework": "6.*",
     "laravel/helpers": "^1.0",
     "laravel/horizon": "^3",
     "laravel/passport": "^7.2",
     "laravel/scout": "^7.1",
     "laravel/telescope": "^2.0",
     "laravel/tinker": "^1.0",
+    "laravelcollective/html": "^6.0",
     "league/flysystem-sftp": "~1.0",
     "nckg/laravel-minify-html": "^1.2",
     "propaganistas/laravel-phone": "^4.1",
