--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ ga-service_account-0d4476d84562.json
 /public/css/user-completeInfo.css
 /public/js/set-show.js
 /public/js/user-completeInfo.js
+/public/css/page-donate.css
+/public/js/page-donate.js
