--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fullcalendar/daygrid": "^4.2.0",
     "@fullcalendar/resource-timeline": "^4.2.0",
     "@fullcalendar/timegrid": "^4.2.0",
+    "@panzoom/panzoom": "^4.0.0",
     "acorn": "^6.2.1",
     "animate.css": "^3.7.2",
     "block-ui": "^2.70.1",
@@ -51,10 +52,12 @@
     "glob-all": "^3.1.0",
     "glyphicons-halflings": "^1.9.1",
     "gulp": "^4.0.1",
+    "hammerjs": "^2.0.8",
     "highcharts": "^7.1.1",
     "icheck": "^1.0.2",
     "inputmask": "^4.0.8",
     "intersection-observer": "^0.7.0",
+    "jquery-mobile": "^1.5.0-alpha.1",
     "jquery-multiselect": "^1.0.0",
     "jquery-sticky": "^1.0.4",
     "jquery-validation": "^1.19.1",
@@ -74,7 +77,6 @@
     "slick-carousel": "^1.8.1",
     "split-string": "^6.1.0",
     "summernote": "^0.8.12",
-    "svg-pan-zoom": "^3.6.1",
     "toastr": "^2.1.4",
     "tooltip": "^1.6.1",
     "truncatise": "0.0.8",
