--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ public/js/product-content-embed.js
 public/js/checkout-completeInfo.js
 public/js/user-profile-salesReport.js
 public/js/admin-content-edit.js
+public/js/product-show-RaheAbrisham.js
 
 public/css/all.css
 public/css/page-live.css
