--- a/public/.gitignore
+++ b/public/.gitignore
@@ -4,3 +4,50 @@ inner.html
 inner2.html
 profile.html
 !/js/page-live.js
+/css/user-completeInfo.css
+/.well-known/
+/js/
+/css/font/
+/mix-manifest.json
+/phpinfo.php
+/test.php
+/css/all.css
+/css/page-live.css
+/css/admin-all.css
+/css/page-shop.css
+/css/auth-login.css
+/css/page-error.css
+/css/user-orders.css
+/css/content-show.css
+/css/user-profile.css
+/css/product-show.css
+/css/page-landing5.css
+/css/page-landing7.css
+/css/page-landing8.css
+/css/page-landing9.css
+/css/page-homePage.css
+/css/content-search.css
+/css/page-contactUs.css
+/css/user-dashboard.css
+/css/page-landing10.css
+/css/checkout-review.css
+/css/page-dashboard1.css
+/css/checkout-payment.css
+/css/landing5-allcss.min.css
+/css/admin-content-create.css
+/css/product-content-embed.css
+/css/checkout-verification.css
+/css/user-profile-salesReport.css
+/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.css
+/css/admin-content-edit.css
+/css/set-show.css
+/acm/AlaatvCustomFiles/components/SearchBoxFilter/style.css
+/acm/AlaatvCustomFiles/components/AjaxLogin/style.css
+/acm/AlaatvCustomFiles/components/Favorite/style.css
+/acm/AlaatvCustomFiles/components/MegaMenu/style.css
+/acm/extra/fullcalendar-Jalaali/
+/acm/video-js/custom/
+/assets/vendors/base/images/ion-rangeslider/
+/hot
+/storage
+/css/page-donate.css
