--- a/public/.gitignore
+++ b/public/.gitignore
@@ -51,3 +51,5 @@ profile.html
 /hot
 /storage
 /css/page-donate.css
+/css/product-show-RaheAbrisham.css
+/acm/AlaatvCustomFiles/components/ScrollCarousel/style.css
