--- a/public/.gitignore
+++ b/public/.gitignore
@@ -53,3 +53,4 @@ profile.html
 /css/page-donate.css
 /css/product-show-RaheAbrisham.css
 /acm/AlaatvCustomFiles/components/ScrollCarousel/style.css
+/acm/AlaatvCustomFiles/components/FormGenerator/style.css
