--- a/package.json
+++ b/package.json
@@ -1,89 +1,90 @@
 {
-    "private": true,
-    "scripts": {
-        "build": "echo NODE_ENV=$NODE_ENV",
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.12.0",
-        "axios": "^0.18.1",
-        "bootstrap": "^4.4.1",
-        "jquery": "^3.4.1",
-        "laravel-mix": "^4.1.4",
-        "laravel-mix-purgecss": "^4.2.0",
-        "lodash": "^4.17.15",
-        "popper.js": "^1.16.0",
-        "purify-css": "^1.2.5",
-        "purifycss-webpack": "^0.7.0",
-        "resolve-url-loader": "^2.3.2",
-        "sass": "^1.24.0",
-        "sass-loader": "^7.3.1",
-        "vue": "^2.6.11"
-    },
-    "dependencies": {
-        "@fullcalendar/core": "^4.3.1",
-        "@fullcalendar/daygrid": "^4.3.0",
-        "@fullcalendar/resource-timeline": "^4.3.0",
-        "@fullcalendar/timegrid": "^4.3.0",
-        "@panzoom/panzoom": "^4.0.0",
-        "acorn": "^6.4.0",
-        "animate.css": "^3.7.2",
-        "block-ui": "^2.70.1",
-        "bootstrap-fileinput": "^5.0.8",
-        "bootstrap-multiselect": "^0.9.15",
-        "bootstrap-switch": "^3.4.0",
-        "bootstrap-tagsinput": "^0.7.1",
-        "cross-env": "^6.0.3",
-        "diff-match-patch": "^1.0.4",
-        "dotenv": "^8.2.0",
-        "firebase": "^7.6.1",
-        "flat-icons": "^1.0.0",
-        "flipclock": "^0.10.8",
-        "font-awesome": "^4.7.0",
-        "fontawesome": "^5.6.3",
-        "fs-minipass": "^1.2.7",
-        "fullcalendar": "^3.10.1",
-        "glider-js": "^1.7.1",
-        "glob-all": "^3.1.0",
-        "glyphicons-halflings": "^1.9.1",
-        "gulp": "^4.0.1",
-        "hammerjs": "^2.0.8",
-        "highcharts": "^7.2.1",
-        "icheck": "^1.0.2",
-        "inputmask": "^4.0.9",
-        "intersection-observer": "^0.7.0",
-        "jquery-mobile": "^1.5.0-alpha.1",
-        "jquery-multiselect": "^1.0.0",
-        "jquery-sticky": "^1.0.4",
-        "jquery-validation": "^1.19.1",
-        "jquery.ajaxsubmit": "^1.0.3",
-        "lightgallery": "^1.6.12",
-        "lightslider": "^1.1.6",
-        "lozad": "^1.14.0",
-        "metrojs": "^0.9.77",
-        "moment": "^2.24.0",
-        "owl.carousel": "^2.3.4",
-        "perfect-scrollbar": "^1.4.0",
-        "persian-date": "^1.1.0",
-        "persian-datepicker": "^1.2.0",
-        "persianjs": "^0.4.0",
-        "select2": "^4.0.12",
-        "siema": "^1.5.1",
-        "slick-carousel": "^1.8.1",
-        "split-string": "^6.1.0",
-        "summernote": "^0.8.14",
-        "toastr": "^2.1.4",
-        "tooltip": "^1.6.1",
-        "truncatise": "0.0.8",
-        "video.js": "^7.6.6",
-        "videojs-flash": "^2.2.1",
-        "videojs-swf": "^5.4.2",
-        "yarn": "^1.21.1"
-    }
+  "private": true,
+  "scripts": {
+    "build": "echo NODE_ENV=$NODE_ENV",
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "axios": "^0.18.1",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "laravel-mix": "^4.1.4",
+    "laravel-mix-purgecss": "^4.2.0",
+    "lodash": "^4.17.15",
+    "popper.js": "^1.16.0",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
+    "resolve-url-loader": "^2.3.2",
+    "sass": "^1.24.0",
+    "sass-loader": "^7.3.1",
+    "vue": "^2.6.11"
+  },
+  "dependencies": {
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/resource-timeline": "^4.3.0",
+    "@fullcalendar/timegrid": "^4.3.0",
+    "@panzoom/panzoom": "^4.0.0",
+    "acorn": "^6.4.0",
+    "animate.css": "^3.7.2",
+    "block-ui": "^2.70.1",
+    "bootstrap-fileinput": "^5.0.8",
+    "bootstrap-multiselect": "^0.9.15",
+    "bootstrap-switch": "^3.4.0",
+    "bootstrap-tagsinput": "^0.7.1",
+    "cross-env": "^6.0.3",
+    "diff-match-patch": "^1.0.4",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.6.1",
+    "flat-icons": "^1.0.0",
+    "flipclock": "^0.10.8",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
+    "fs-minipass": "^1.2.7",
+    "fullcalendar": "^3.10.1",
+    "glider-js": "^1.7.1",
+    "glob-all": "^3.1.0",
+    "glyphicons-halflings": "^1.9.1",
+    "gulp": "^4.0.1",
+    "hammerjs": "^2.0.8",
+    "highcharts": "^7.2.1",
+    "icheck": "^1.0.2",
+    "inputmask": "^4.0.9",
+    "intersection-observer": "^0.7.0",
+    "jquery-mobile": "^1.5.0-alpha.1",
+    "jquery-multiselect": "^1.0.0",
+    "jquery-sticky": "^1.0.4",
+    "jquery-validation": "^1.19.1",
+    "jquery.ajaxsubmit": "^1.0.3",
+    "lightgallery": "^1.6.12",
+    "lightslider": "^1.1.6",
+    "lozad": "^1.14.0",
+    "metrojs": "^0.9.77",
+    "moment": "^2.24.0",
+    "owl.carousel": "^2.3.4",
+    "perfect-scrollbar": "^1.4.0",
+    "persian-date": "^1.1.0",
+    "persian-datepicker": "^1.2.0",
+    "persianjs": "^0.4.0",
+    "pretty-checkbox": "^3.0.3",
+    "select2": "^4.0.12",
+    "siema": "^1.5.1",
+    "slick-carousel": "^1.8.1",
+    "split-string": "^6.1.0",
+    "summernote": "^0.8.14",
+    "toastr": "^2.1.4",
+    "tooltip": "^1.6.1",
+    "truncatise": "0.0.8",
+    "video.js": "^7.6.6",
+    "videojs-flash": "^2.2.1",
+    "videojs-swf": "^5.4.2",
+    "yarn": "^1.21.1"
+  }
 }
