--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "resolve-url-loader": "^2.3.2",
     "sass": "^1.24.0",
     "sass-loader": "^7.3.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.8.3",
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/resource-timeline": "^4.3.0",
@@ -40,6 +42,8 @@
     "bootstrap-switch": "^3.4.0",
     "bootstrap-tagsinput": "^0.7.1",
     "cross-env": "^6.0.3",
+    "datatables.net": "^1.10.20",
+    "datatables.net-buttons": "^1.6.1",
     "diff-match-patch": "^1.0.4",
     "dotenv": "^8.2.0",
     "firebase": "^7.6.1",
@@ -63,6 +67,8 @@
     "jquery-sticky": "^1.0.4",
     "jquery-validation": "^1.19.1",
     "jquery.ajaxsubmit": "^1.0.3",
+    "knockout": "^3.5.1",
+    "laravel-mix-polyfill": "^2.0.0",
     "lightgallery": "^1.6.12",
     "lightslider": "^1.1.6",
     "lozad": "^1.14.0",
